Added GetFiltered endpoint for Item api route.  FilterCriteria class to create LINQ Expression to pass to IRepository implementations.  Added custom ControllerBase.

--- a/GarageSale/GarageSale.API/GarageSale.API.csproj
+++ b/GarageSale/GarageSale.API/GarageSale.API.csproj
@@ -1,11 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>5379f377-d01c-447a-bb50-534fc95055ae</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GarageSale.Data\GarageSale.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="OrderEndpoints\" />
   </ItemGroup>
 
 </Project>
