--- a/GarageSale/GarageSale.API/appsettings.json
+++ b/GarageSale/GarageSale.API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "GarageSaleMySQL": "server=localhost;port=3306;database=GarageSale",
+        "GarageSaleSQLite": "Data Source=GarageSale.db"
+    }
 }
