--- a/GarageSale/GarageSale.Site/GarageSale.Site.csproj
+++ b/GarageSale/GarageSale.Site/GarageSale.Site.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GarageSale.Shared\GarageSale.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
